--- a/.github/workflows/deploy-host-ui.yml
+++ b/.github/workflows/deploy-host-ui.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/host_ui
         env:
+          USER_API_BASE: ${{ secrets.USER_API_BASE_INT }}
           HOST_API_BASE: ${{ secrets.HOST_API_BASE_INT }}
+          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_INT }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -79,7 +81,9 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/host_ui
         env:
+          USER_API_BASE: ${{ secrets.USER_API_BASE_INT }}
           HOST_API_BASE: ${{ secrets.HOST_API_BASE_INT }}
+          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_INT }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -124,7 +128,9 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/host_ui
         env:
+          USER_API_BASE: ${{ secrets.USER_API_BASE_PROD }}
           HOST_API_BASE: ${{ secrets.HOST_API_BASE_PROD }}
+          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_PROD }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
