--- a/.github/workflows/deploy-auth-ui.yml
+++ b/.github/workflows/deploy-auth-ui.yml
@@ -34,10 +34,15 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/auth_ui
         env:
-          Auth_API_BASE: ${{ secrets.Auth_API_BASE_INT }}
           COGNITO_API_DOMAIN: ${{ secrets.COGNITO_API_DOMAIN_INT }}
           COGNITO_USER_POOL_ID: ${{ secrets.COGNITO_USER_POOL_ID_INT }}
           COGNITO_APP_CLIENT_ID: ${{ secrets.COGNITO_APP_CLIENT_ID_INT }}
+          USER_API_BASE: ${{ secrets.USER_API_BASE_INT }}
+          HOST_API_BASE: ${{ secrets.HOST_API_BASE_INT }}
+          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_INT }}
+          GUSET_UI_URL: ${{ secrets.GUEST_UI_URL_INT }}
+          HOST_UI_URL: ${{ secrets.HOST_UI_URL_INT }}
+          AUTH_UI_URL: ${{ secrets.AUTH_UI_URL_INT }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -82,10 +87,15 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/auth_ui
         env:
-          Auth_API_BASE: ${{ secrets.Auth_API_BASE_INT }}
           COGNITO_API_DOMAIN: ${{ secrets.COGNITO_API_DOMAIN_INT }}
           COGNITO_USER_POOL_ID: ${{ secrets.COGNITO_USER_POOL_ID_INT }}
           COGNITO_APP_CLIENT_ID: ${{ secrets.COGNITO_APP_CLIENT_ID_INT }}
+          USER_API_BASE: ${{ secrets.USER_API_BASE_INT }}
+          HOST_API_BASE: ${{ secrets.HOST_API_BASE_INT }}
+          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_INT }}
+          GUSET_UI_URL: ${{ secrets.GUEST_UI_URL_INT }}
+          HOST_UI_URL: ${{ secrets.HOST_UI_URL_INT }}
+          AUTH_UI_URL: ${{ secrets.AUTH_UI_URL_INT }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -130,10 +140,15 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/auth_ui
         env:
-          Auth_API_BASE: ${{ secrets.Auth_API_BASE_PROD }}
           COGNITO_API_DOMAIN: ${{ secrets.COGNITO_API_DOMAIN_PROD }}
           COGNITO_USER_POOL_ID: ${{ secrets.COGNITO_USER_POOL_ID_PROD }}
           COGNITO_APP_CLIENT_ID: ${{ secrets.COGNITO_APP_CLIENT_ID_PROD }}
+          USER_API_BASE: ${{ secrets.USER_API_BASE_PROD }}
+          HOST_API_BASE: ${{ secrets.HOST_API_BASE_PROD }}
+          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_PROD }}
+          GUSET_UI_URL: ${{ secrets.GUEST_UI_URL_PROD }}
+          HOST_UI_URL: ${{ secrets.HOST_UI_URL_PROD }}
+          AUTH_UI_URL: ${{ secrets.AUTH_UI_URL_PROD }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
