--- a/bffs/guest_bff/requirements.txt
+++ b/bffs/guest_bff/requirements.txt
@@ -18,6 +18,7 @@ passlib[bcrypt]==1.7.4
 
 # --- Pydantic for validation ---
 pydantic==2.7.1
+pydantic[email]==2.7.1
 pydantic-settings==2.2.1
 
 # --- Optional (for local dev/testing) ---
