--- a/microfrontends/guest_ui/package.json
+++ b/microfrontends/guest_ui/package.json
@@ -16,10 +16,16 @@
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "lint": "^0.8.19",
     "nuxt": "^3.12.0",
     "pinia": "^2.1.7"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.36.0",
+    "eslint": "^9.36.0",
+    "eslint-plugin-vue": "^10.5.0",
+    "globals": "^16.4.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.44.1"
   }
 }
