--- a/microfrontends/auth_ui/package.json
+++ b/microfrontends/auth_ui/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "name": "guest-ui",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +23,12 @@
     "pinia": "^2.1.7"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.36.0",
+    "eslint": "^9.36.0",
+    "eslint-plugin-vue": "^10.5.0",
+    "globals": "^16.4.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.44.1"
   }
 }
+
