--- a/microfrontends/host_ui/package.json
+++ b/microfrontends/host_ui/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "guest-ui",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "lint": "eslint --ext .ts,.vue ."
   },
   "dependencies": {
     "@aws-sdk/client-location": "^3.x.x",
@@ -30,4 +31,3 @@
     "typescript-eslint": "^8.44.1"
   }
 }
-
