--- a/microfrontends/auth_ui/package.json
+++ b/microfrontends/auth_ui/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/node": "^24.5.2",
     "eslint": "^9.36.0",
     "eslint-plugin-vue": "^10.5.0",
     "globals": "^16.4.0",
