--- a/.github/workflows/deploy-guest-ui.yml
+++ b/.github/workflows/deploy-guest-ui.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  CDK_DEFAULT_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
+  CDK_DEFAULT_ACCOUNT: 914242301564
 
 permissions:
   id-token: write
@@ -34,7 +34,7 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/guest_ui
         env:
-          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_INT }}
+          GUEST_API_BASE: ${{ env.GUEST_API_BASE_INT }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -53,7 +53,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::914242301564:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy Guest UI (PR)
@@ -79,7 +79,7 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/guest_ui
         env:
-          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_INT }}
+          GUEST_API_BASE: ${{ env.GUEST_API_BASE_INT }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -98,7 +98,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::914242301564:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy Guest UI (INT)
@@ -124,7 +124,7 @@ jobs:
       - name: Install deps and generate static site
         working-directory: microfrontends/guest_ui
         env:
-          GUEST_API_BASE: ${{ secrets.GUEST_API_BASE_PROD }}
+          GUEST_API_BASE: ${{ env.GUEST_API_BASE_PROD }}
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
           npm run generate
@@ -143,7 +143,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::914242301564:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy Guest UI (PROD)
