--- a/.github/workflows/deploy-auth-ui.yml
+++ b/.github/workflows/deploy-auth-ui.yml
@@ -23,47 +23,40 @@ jobs:
   build-and-deploy-pr:
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
+    env:
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_INT }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_INT }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_INT }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_INT }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_INT }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_INT }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
       - name: Install deps and generate static site
         working-directory: microfrontends/auth_ui
-        env:
-          COGNITO_API_DOMAIN: ${{ env.COGNITO_API_DOMAIN_INT }}
-          COGNITO_USER_POOL_ID: ${{ env.COGNITO_USER_POOL_ID_INT }}
-          COGNITO_APP_CLIENT_ID: ${{ env.COGNITO_APP_CLIENT_ID_INT }}
-          USER_API_BASE: ${{ env.USER_API_BASE_INT }}
-          HOST_API_BASE: ${{ env.HOST_API_BASE_INT }}
-          GUEST_API_BASE: ${{ env.GUEST_API_BASE_INT }}
-          GUSET_UI_URL: ${{ env.GUEST_UI_URL_INT }}
-          HOST_UI_URL: ${{ env.HOST_UI_URL_INT }}
-          AUTH_UI_URL: ${{ env.AUTH_UI_URL_INT }}
         run: |
-          if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
+          npm ci || npm install --no-fund --no-audit
           npm run generate
-
       - name: Setup Python and CDK
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
       - run: npm install -g aws-cdk
-
       - name: Install infra requirements
         working-directory: microfrontends/auth_ui/infra
         run: pip install -r requirements.txt
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::914242301564:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy Auth UI (PR)
         working-directory: microfrontends/auth_ui/infra
         run: |
@@ -76,47 +69,40 @@ jobs:
   build-and-deploy-int:
     if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-latest
+    env:
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_INT }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_INT }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_INT }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_INT }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_INT }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_INT }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
       - name: Install deps and generate static site
         working-directory: microfrontends/auth_ui
-        env:
-          COGNITO_API_DOMAIN: ${{ env.COGNITO_API_DOMAIN_INT }}
-          COGNITO_USER_POOL_ID: ${{ env.COGNITO_USER_POOL_ID_INT }}
-          COGNITO_APP_CLIENT_ID: ${{ env.COGNITO_APP_CLIENT_ID_INT }}
-          USER_API_BASE: ${{ env.USER_API_BASE_INT }}
-          HOST_API_BASE: ${{ env.HOST_API_BASE_INT }}
-          GUEST_API_BASE: ${{ env.GUEST_API_BASE_INT }}
-          GUSET_UI_URL: ${{ env.GUEST_UI_URL_INT }}
-          HOST_UI_URL: ${{ env.HOST_UI_URL_INT }}
-          AUTH_UI_URL: ${{ env.AUTH_UI_URL_INT }}
         run: |
-          if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
+          npm ci || npm install --no-fund --no-audit
           npm run generate
-
       - name: Setup Python and CDK
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
       - run: npm install -g aws-cdk
-
       - name: Install infra requirements
         working-directory: microfrontends/auth_ui/infra
         run: pip install -r requirements.txt
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::914242301564:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy Auth UI (INT)
         working-directory: microfrontends/auth_ui/infra
         run: |
@@ -129,47 +115,40 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     needs: build-and-deploy-int
     runs-on: ubuntu-latest
+    env:
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_PROD }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_PROD }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_PROD }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_PROD }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_PROD }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_PROD }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_PROD }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_PROD }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_PROD }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
       - name: Install deps and generate static site
         working-directory: microfrontends/auth_ui
-        env:
-          COGNITO_API_DOMAIN: ${{ env.COGNITO_API_DOMAIN_PROD }}
-          COGNITO_USER_POOL_ID: ${{ env.COGNITO_USER_POOL_ID_PROD }}
-          COGNITO_APP_CLIENT_ID: ${{ env.COGNITO_APP_CLIENT_ID_PROD }}
-          USER_API_BASE: ${{ env.USER_API_BASE_PROD }}
-          HOST_API_BASE: ${{ env.HOST_API_BASE_PROD }}
-          GUEST_API_BASE: ${{ env.GUEST_API_BASE_PROD }}
-          GUSET_UI_URL: ${{ env.GUEST_UI_URL_PROD }}
-          HOST_UI_URL: ${{ env.HOST_UI_URL_PROD }}
-          AUTH_UI_URL: ${{ env.AUTH_UI_URL_PROD }}
         run: |
-          if [ -f package-lock.json ]; then npm ci; else npm install --no-fund --no-audit; fi
+          npm ci || npm install --no-fund --no-audit
           npm run generate
-
       - name: Setup Python and CDK
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
       - run: npm install -g aws-cdk
-
       - name: Install infra requirements
         working-directory: microfrontends/auth_ui/infra
         run: pip install -r requirements.txt
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::914242301564:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy Auth UI (PROD)
         working-directory: microfrontends/auth_ui/infra
         run: |
