--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,6 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  AWS_ACCOUNT_ID: "914242301564"
   CDK_DEFAULT_ACCOUNT: "914242301564"
 
 permissions:
@@ -38,22 +37,18 @@ jobs:
           CHANGED_PATHS=""
           if [ "$EVENT_NAME" = "push" ]; then
             BEFORE="${{ github.event.before }}"; AFTER="${{ github.sha }}"
-            echo "Diff range (push): $BEFORE..$AFTER"
             CHANGED_PATHS=$(git diff --name-only "$BEFORE" "$AFTER")
           elif [ "$EVENT_NAME" = "pull_request" ]; then
-            echo "Diff range (PR): origin/main...HEAD"
             CHANGED_PATHS=$(git diff --name-only origin/main...HEAD)
           elif [ "$EVENT_NAME" = "pull_request_target" ] && \
                [ "${{ github.event.action }}" = "closed" ] && \
                [ "${{ github.event.pull_request.merged }}" = "true" ] && \
                [ "${{ github.event.pull_request.base.ref }}" = "main" ]; then
-            echo "PR merged into main; deploying all components"
             CHANGED_PATHS="__ALL__"
           fi
 
           TARGETS_JSON='[]'
           if [ "$CHANGED_PATHS" = "__ALL__" ] || [ -z "$CHANGED_PATHS" ]; then
-            echo "No specific paths detected; defaulting to all services and bffs"
             if [ -d services ]; then
               for n in $(ls services); do
                 TARGETS_JSON=$(echo "$TARGETS_JSON" | jq -c --arg p "services/$n" '. + [$p]')
@@ -71,7 +66,6 @@ jobs:
             for p in $BFF; do TARGETS_JSON=$(echo "$TARGETS_JSON" | jq -c --arg p "$p" '. + [$p]'); done
           fi
 
-          echo "Changed components: $TARGETS_JSON"
           echo "changed=$TARGETS_JSON" >> $GITHUB_OUTPUT
 
   deploy-pr:
@@ -83,19 +77,24 @@ jobs:
         component: ${{ fromJson(needs.detect-changes.outputs.changed) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_INT }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_INT }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_INT }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_INT }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_INT }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_INT }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Python and CDK
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - run: npm install -g aws-cdk
-
       - name: Install requirements
         run: pip install -r ${{ matrix.component }}/infra/requirements.txt
-
       - name: Vendor Python runtime dependencies
         shell: bash
         run: |
@@ -106,19 +105,16 @@ jobs:
           elif [ -f "$SERVICE_PATH/requirements.txt" ]; then
             pip install -r "$SERVICE_PATH/requirements.txt" -t "$APP_DIR"
           fi
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy Preview Stack
         run: |
           SERVICE_PATH=${{ matrix.component }}
           SERVICE_NAME=$(basename "$SERVICE_PATH")
-          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
-          STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+          STACK_NAME="$(echo "$SERVICE_NAME" | sed -E 's/(^|_)([a-z])/\U\2/g')Stack-pr-${PR_NUMBER}"
           cdk deploy "$STACK_NAME" \
             --app "python3 ${SERVICE_PATH}/infra/app.py" \
             --context env=pr \
@@ -128,25 +124,32 @@ jobs:
   deploy-int:
     if: |
       github.event_name == 'push' && github.ref == 'refs/heads/main' ||
-      (github.event_name == 'pull_request_target' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main')
+      (github.event_name == 'pull_request_target' && github.event.action == 'closed' &&
+       github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main')
     needs: detect-changes
     runs-on: ubuntu-latest
     strategy:
       matrix:
         component: ${{ fromJson(needs.detect-changes.outputs.changed) }}
+    env:
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_INT }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_INT }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_INT }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_INT }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_INT }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_INT }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Python and CDK
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - run: npm install -g aws-cdk
-
       - name: Install requirements
         run: pip install -r ${{ matrix.component }}/infra/requirements.txt
-
       - name: Vendor Python runtime dependencies
         shell: bash
         run: |
@@ -157,19 +160,16 @@ jobs:
           elif [ -f "$SERVICE_PATH/requirements.txt" ]; then
             pip install -r "$SERVICE_PATH/requirements.txt" -t "$APP_DIR"
           fi
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy Int Stack
         run: |
           SERVICE_PATH=${{ matrix.component }}
           SERVICE_NAME=$(basename "$SERVICE_PATH")
-          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
-          STACK_NAME="${PASCAL_CASE_NAME}Stack-int"
+          STACK_NAME="$(echo "$SERVICE_NAME" | sed -E 's/(^|_)([a-z])/\U\2/g')Stack-int"
           cdk deploy "$STACK_NAME" \
             --app "python3 ${SERVICE_PATH}/infra/app.py" \
             --context env=int \
@@ -178,25 +178,32 @@ jobs:
   deploy-prod:
     if: |
       github.event_name == 'push' && github.ref == 'refs/heads/main' ||
-      (github.event_name == 'pull_request_target' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main')
+      (github.event_name == 'pull_request_target' && github.event.action == 'closed' &&
+       github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main')
     needs: [detect-changes, deploy-int]
     runs-on: ubuntu-latest
     strategy:
       matrix:
         component: ${{ fromJson(needs.detect-changes.outputs.changed) }}
+    env:
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_PROD }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_PROD }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_PROD }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_PROD }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_PROD }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_PROD }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_PROD }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_PROD }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_PROD }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Python and CDK
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - run: npm install -g aws-cdk
-
       - name: Install requirements
         run: pip install -r ${{ matrix.component }}/infra/requirements.txt
-
       - name: Vendor Python runtime dependencies
         shell: bash
         run: |
@@ -207,19 +214,16 @@ jobs:
           elif [ -f "$SERVICE_PATH/requirements.txt" ]; then
             pip install -r "$SERVICE_PATH/requirements.txt" -t "$APP_DIR"
           fi
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Deploy Production Stack
         run: |
           SERVICE_PATH=${{ matrix.component }}
           SERVICE_NAME=$(basename "$SERVICE_PATH")
-          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
-          STACK_NAME="${PASCAL_CASE_NAME}Stack-prod"
+          STACK_NAME="$(echo "$SERVICE_NAME" | sed -E 's/(^|_)([a-z])/\U\2/g')Stack-prod"
           cdk deploy "$STACK_NAME" \
             --app "python3 ${SERVICE_PATH}/infra/app.py" \
             --context env=prod \
@@ -234,24 +238,28 @@ jobs:
         component: ${{ fromJson(needs.detect-changes.outputs.changed) }}
     env:
       PR_NUMBER: ${{ github.event.pull_request.number }}
+      COGNITO_API_DOMAIN: ${{ vars.COGNITO_API_DOMAIN_INT }}
+      COGNITO_USER_POOL_ID: ${{ vars.COGNITO_USER_POOL_ID_INT }}
+      COGNITO_APP_CLIENT_ID: ${{ vars.COGNITO_APP_CLIENT_ID_INT }}
+      USER_API_BASE: ${{ vars.USER_API_BASE_INT }}
+      HOST_API_BASE: ${{ vars.HOST_API_BASE_INT }}
+      GUEST_API_BASE: ${{ vars.GUEST_API_BASE_INT }}
+      GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
+      HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
+      AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
     steps:
       - uses: actions/checkout@v4
-
       - run: npm install -g aws-cdk
-
       - name: Install requirements
         run: pip install -r ${{ matrix.component }}/infra/requirements.txt
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Destroy PR Preview Stack
         run: |
           SERVICE_PATH=${{ matrix.component }}
           SERVICE_NAME=$(basename "$SERVICE_PATH")
-          PASCAL_CASE_NAME=$(echo "$SERVICE_NAME" | awk -F'_' 'BEGIN{OFS=""} { for(i=1;i<=NF;i++) $i=toupper(substr($i,1,1)) substr($i,2); print }')
-          STACK_NAME="${PASCAL_CASE_NAME}Stack-pr-${PR_NUMBER}"
+          STACK_NAME="$(echo "$SERVICE_NAME" | sed -E 's/(^|_)([a-z])/\U\2/g')Stack-pr-${PR_NUMBER}"
           cdk destroy "$STACK_NAME" --force
