--- a/services/user_service/requirements.txt
+++ b/services/user_service/requirements.txt
@@ -14,7 +14,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 
 # --- Pydantic for validation ---
-pydantic==2.7.1
+pydantic[email]==2.7.1
 pydantic-settings==2.2.1
 
 # --- Optional (for local dev/testing) ---
