--- a/services/user_service/requirements.txt
+++ b/services/user_service/requirements.txt
@@ -9,6 +9,10 @@ psycopg2-binary==2.9.9
 # --- AWS Integration ---
 boto3==1.34.89
 
+# --- HTTP client ---
+requests==2.31.0
+httpx==0.27.0
+
 # --- Auth / Cognito (JWT) ---
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
