--- a/.github/workflows/deploy-host-ui.yml
+++ b/.github/workflows/deploy-host-ui.yml
@@ -64,13 +64,12 @@ jobs:
           role-to-assume: arn:aws:iam::${{ env.CDK_DEFAULT_ACCOUNT }}:role/GitHubActionsRole
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy Host UI (PR)
+      - name: Deploy Host UI (INT)
         working-directory: microfrontends/host_ui/infra
         run: |
-          cdk deploy "HostUiStack-pr-${{ github.event.pull_request.number }}" \
+          cdk deploy "HostUiStack-int" \
             --app "python3 app.py" \
-            --context env=pr \
-            --context pr_number=${{ github.event.pull_request.number }} \
+            --context env=int \
             --require-approval never
 
   build-and-deploy-int:
