--- a/.github/workflows/deploy-auth-ui.yml
+++ b/.github/workflows/deploy-auth-ui.yml
@@ -44,6 +44,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
@@ -89,6 +92,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
@@ -135,6 +141,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_PROD }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_PROD }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_PROD }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
@@ -181,6 +190,9 @@ jobs:
       GUEST_UI_URL: ${{ github.event.inputs.environment == 'prod' && vars.GUEST_UI_URL_PROD || vars.GUEST_UI_URL_INT }}
       HOST_UI_URL: ${{ github.event.inputs.environment == 'prod' && vars.HOST_UI_URL_PROD || vars.HOST_UI_URL_INT }}
       AUTH_UI_URL: ${{ github.event.inputs.environment == 'prod' && vars.AUTH_UI_URL_PROD || vars.AUTH_UI_URL_INT }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
