--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,6 +86,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python and CDK
@@ -141,6 +144,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python and CDK
@@ -195,6 +201,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_PROD }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_PROD }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_PROD }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python and CDK
@@ -247,6 +256,9 @@ jobs:
       GUEST_UI_URL: ${{ vars.GUEST_UI_URL_INT }}
       HOST_UI_URL: ${{ vars.HOST_UI_URL_INT }}
       AUTH_UI_URL: ${{ vars.AUTH_UI_URL_INT }}
+      PAYPAL_CLIENT_ID: ${{ vars.PAYPAL_CLIENT_ID }}
+      PAYPAL_BASE_URL: ${{ vars.PAYPAL_BASE_URL }}
+      PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - run: npm install -g aws-cdk
